wds_website/src/stylesheets/scss/_services.scss
/*******************************
          Services
  *******************************/


.sevices-background-section1 {
    display: flex;
    background-color: #AFD5DB;
    border-top-style: outset;
    border-top-color: black;
    border-top-width: 5px;
    border-bottom-style: outset;
    border-bottom-color: black;
    border-bottom-width: 5px;
  }
  .servicespic {
    max-height: 500px;
    margin-right: 20px;
  }
  .services-img {
    width: 1368px;
    height: 768px;
  }

  .grid-2col-callout {
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: auto;
    grid-gap: 50px;
    display: grid;
  }

  .callout1 {
    grid-column: 1/2;
    grid-row: 1/1;
    justify-content: center;
  }

  .callout2 {
    grid-column: 2/2;
    grid-row: 1/1;
    justify-content: center;
  }
  

  .container-grid-2col-photo-services {
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto;
    grid-gap: 10px;
    display: grid;
  }

  .grid-2col-photo-content {
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto;
    grid-gap: 10px;
    display: grid;
  }

  .grid-left {
    grid-column: 1/2;
    grid-row: auto;
    justify-content: center;
  }

  .grid-left-truth {
    grid-column: 1/2;
    grid-row: auto;
    justify-content: center;
  }

  .grid-left-services {
    grid-column: 1/1;
    grid-row: auto;
    justify-content: center;
  }

  .photo-container {
    width: 550px;
    height:333px;
  }

  .align-self-baseline {
    align-self: baseline;
 
  }


  



  .grid-left-contentWrap {
    grid-column: col / span 2;
    grid-row: auto;
    justify-content: center;
  }

  .grid-left-15 {
    grid-column: 1/2;
    grid-row: auto;
    justify-content: center;
    margin-left: 15%;
  }


  .grid-left-45 {
    grid-column: 1/2;
    grid-row: auto;
    justify-content: center;
    margin-left: 45%;
  }

  .grid-left-30 {
    grid-column: 1/2;
    grid-row: 1;
    justify-content: flex-start;
    align-self: flex-start;
    margin-left: 30%;
  }

  .grid-left-25 {
    grid-column: 1/2;
    grid-row: auto;
    margin-left: 20%;
  }

  .grid-right {
    grid-column: 2/2;
    grid-row: auto;
    margin-left: -6%;
  }

  .grid-right-truth {
    grid-column: 2/2;
    grid-row: auto;
    margin-left: -10%;
  }

  .grid-right-css {
    grid-column: 2/2;
    grid-row: auto;
    margin-left: -4%;
  }

  .grid-right-ds {
    grid-column: 2/2;
    grid-row: auto;
    margin-left: -4%;
    align-self: flex-end;
  }

  .grid-right-services {
    grid-column: 2/2;
    grid-row: auto;
    margin-left: -10%;
  }

  .grid-right-15 {
    grid-column: 2/2;
    grid-row: 1;
    margin-left: 15%;
  }

  .grid-left-photo {
    grid-column: 1/2;
    grid-row: 1;
    margin-left: 6%;
  }

  .grid-right-content {
    grid-column: 2/2;
    grid-row: 1;
    justify-content: center;
  }

  .grid-right-contentWrap {
    grid-column: 1/3;
    grid-row: 2;
    justify-content: center;
  }

  .grid-right-photo {
    grid-column: 2/2;
    grid-row: auto;
    justify-content: center;
    align-self: center;
  }

  .grid-services-list {
    width: 1200px;
    grid-template-columns: repeat(3, 400px);
    grid-row: auto;
    grid-gap: 20px;
    display: grid;
  }

  .grid-2things {
    width: 1200px;
    grid-template-columns: repeat(2, 600px);
    grid-gap: 25px;
    display: grid;  
  }

  .thing1 {
    grid-column: 1/2;
  }

  .thing2 {
    grid-column: 2/2;
  }

  .grid-services-title {
    grid-column: 1/4;
    grid-row: 1;
  }
  .grid-services-1 {
    grid-column: 1/1;
    grid-row: 2;
  }

  .grid-services-2 {
    grid-column: 2/2;
    grid-row: 2;
  }

  .grid-services-3 {
    grid-column: 3/3;
    grid-row: 2;
  }

  .grid-services-4 {
    grid-column: 1/1;
    grid-row: 3;
  }

  .grid-services-5 {
    grid-column: 2/2;
    grid-row: 3;
  }

  .grid-services-6 {
    grid-column: 3/3;
    grid-row: 3;
  }

